# dfx-api-client-cpp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Justfile  LICENSE.TXT  README.md  conan_provider.cmake  conanfile.py  dependencies.yaml  requirements.txt
api-cpp/: CMakeLists.txt
api-cpp-grpc/: CMakeLists.txt
api-cpp-grpc/include/dfx/api/grpc/: CloudGRPC.hpp  DeviceGRPC.hpp  MeasurementGRPC.hpp  MeasurementStreamGRPC.hpp  OrganizationGRPC.hpp  SignalGRPC.hpp  StudyGRPC.hpp  UserGRPC.hpp
api-cpp-grpc/src/: CloudGRPC.cpp  CloudGRPCMacros.hpp  DeviceGRPC.cpp  MeasurementGRPC.cpp  MeasurementStreamGRPC.cpp  OrganizationGRPC.cpp  SignalGRPC.cpp  StudyGRPC.cpp  UserGRPC.cpp
api-cpp-rest/: CMakeLists.txt
api-cpp-rest/include/dfx/api/rest/: CloudREST.hpp  DeviceREST.hpp  LicenseREST.hpp  MeasurementREST.hpp  MeasurementStreamREST.hpp  OrganizationREST.hpp  ProfileREST.hpp  SignalREST.hpp  StudyREST.hpp  UserREST.hpp
api-cpp-rest/src/: CloudREST.cpp  DeviceREST.cpp  LicenseREST.cpp  MeasurementREST.cpp  MeasurementStreamREST.cpp  OrganizationREST.cpp  ProfileREST.cpp  SignalREST.cpp  StudyREST.cpp  UserREST.cpp
api-cpp-validator/: CMakeLists.txt
api-cpp-validator/include/dfx/api/validator/: CloudValidator.hpp  DeviceValidator.hpp  LicenseValidator.hpp  MeasurementStreamValidator.hpp  MeasurementValidator.hpp  OrganizationValidator.hpp  ProfileValidator.hpp  SignalValidator.hpp  StudyValidator.hpp  UserValidator.hpp
api-cpp-validator/src/: CloudValidator.cpp  CloudValidatorMacros.hpp  DeviceValidator.cpp  LicenseValidator.cpp  MeasurementStreamValidator.cpp  MeasurementValidator.cpp  NoValidator.cpp  OrganizationValidator.cpp  ProfileValidator.cpp  SignalValidator.cpp  StudyValidator.cpp  UserValidator.cpp
api-cpp-websocket/: CMakeLists.txt
api-cpp-websocket-json/: CMakeLists.txt
api-cpp-websocket-json/include/dfx/api/websocket/json/: CloudWebSocketJson.hpp  DeviceWebSocketJson.hpp  (+7 more)
api-cpp-websocket-json/src/: CloudWebSocketJson.cpp  DeviceWebSocketJson.cpp  LicenseWebSocketJson.cpp  MeasurementStreamJsonWebSocket.cpp  MeasurementWebSocketJson.cpp  OrganizationWebSocketJson.cpp  ProfileWebSocketJson.cpp  StudyWebSocketJson.cpp  UserWebSocketJson.cpp
api-cpp-websocket-protobuf/: CMakeLists.txt
api-cpp-websocket-protobuf/src/: CloudWebSocketProtobuf.cpp  DeviceWebSocketProtobuf.cpp  LicenseWebSocketProtobuf.cpp  MeasurementStreamWebSocketProtobuf.cpp  MeasurementWebSocketProtobuf.cpp  OrganizationWebSocketProtobuf.cpp  ProfileWebSocketProtobuf.cpp  StudyWebSocketProtobuf.cpp  UserWebSocketProtobuf.cpp
api-cpp-websocket/include/dfx/api/websocket/: CloudWebSocket.hpp  DeviceWebSocket.hpp  LicenseWebSocket.hpp  MeasurementStreamWebSocket.hpp  MeasurementWebSocket.hpp  OrganizationWebSocket.hpp  ProfileWebSocket.hpp  StudyWebSocket.hpp  UserWebSocket.hpp
api-cpp-websocket/src/: CloudWebSocket.cpp  DeviceWebSocket.cpp  LicenseWebSocket.cpp  MeasurementStreamWebSocket.cpp  MeasurementWebSocket.cpp  OrganizationWebSocket.cpp  ProfileWebSocket.cpp  StudyWebSocket.cpp  UserWebSocket.cpp
api-cpp/include/dfx/api/: CloudAPI.hpp  CloudConfig.hpp  CloudLog.hpp  CloudStatus.hpp  CloudTypes.hpp  DeviceAPI.hpp  LicenseAPI.hpp  MeasurementAPI.hpp  MeasurementStreamAPI.hpp  OrganizationAPI.hpp  ProfileAPI.hpp  SignalAPI.hpp  StudyAPI.hpp  UserAPI.hpp
api-cpp/include/dfx/api/types/: DeviceTypes.hpp  FilterHelpers.hpp  LicenseTypes.hpp  MeasurementTypes.hpp  OrganizationTypes.hpp  ProfileTypes.hpp  SignalTypes.hpp  StudyTypes.hpp  UserTypes.hpp
api-cpp/src/: CloudAPI.cpp  CloudConfig.cpp  CloudLog.cpp  CloudStatus.cpp  CloudTypes.cpp  DeviceAPI.cpp  DeviceTypes.cpp  LicenseAPI.cpp  LicenseTypes.cpp  MeasurementAPI.cpp  MeasurementStreamAPI.cpp  MeasurementTypes.cpp  OrganizationAPI.cpp  OrganizationTypes.cpp  ProfileAPI.cpp  ProfileTypes.cpp  SignalAPI.cpp  SignalTypes.cpp  StudyAPI.cpp  StudyTypes.cpp  UserAPI.cpp  UserTypes.cpp
api-protos-grpc/: CMakeLists.txt  README.rst
api-protos-web/: CMakeLists.txt
api-utils/: CMakeLists.txt
api-utils/include/dfx/api/utils/: FileUtils.hpp  HexDump.hpp
api-utils/src/: FileUtils.cpp  HexDump.cpp
doc/: CMakeLists.txt  README.rst
doc/api-cpp-doxygen/: CMakeLists.txt  Doxyfile.in
doc/api-protos-grpc-doxygen/: CMakeLists.txt
doc/api-protos-web-doxygen/: CMakeLists.txt  Doxyfile.in
doc/rst2pdf/: custom_styles.txt  rst2pdf.conf
doc/sphinx/: about.rst  changelog.rst  conf.py  configuration.rst  dfxcli.rst  getting_started.rst  index.rst  installation.rst  license.rst  sphinxcover.tmpl  testing.rst
doc/sphinx/_static/css/: custom.css
doc/sphinx/api-cpp/: cloudapi-device.rst  cloudapi-measurement.rst  cloudapi-measurementstream.rst  cloudapi-organization.rst  cloudapi-signal.rst  cloudapi-study.rst  cloudapi-user.rst  cloudapi.rst  cloudstatus.rst  cloudtypes.rst
doc/sphinx/locale/cn/LC_MESSAGES/: index.mo  index.po
doc/sphinx/protos-grpc/: protos-grpc-device.rst  protos-grpc.rst
doc/sphinx/protos-web/: protos-web-device.rst  protos-web.rst
doc/sphinx/transports/: differences.rst
test/: CMakeLists.txt
test/include/dfx/api/tests/: CloudTests.hpp
test/src/: CloudTests.cpp  DeviceTests.cpp  LicenseTests.cpp  MeasurementTests.cpp  OrganizationTests.cpp  ProfileTests.cpp  SignalTests.cpp  StudyTests.cpp  UserTests.cpp
tool-dfxcli/: CMakeLists.txt  README.md
tool-dfxcli/include/dfx/api/cli/: AuthCommands.hpp  ConfigCommand.hpp  DFXAppCommand.hpp  DeviceCommand.hpp  LicenseCommand.hpp  MeasurementCommand.hpp  OrganizationCommand.hpp  ProfileCommand.hpp  SignalCommand.hpp  StatusCommand.hpp  StudyCommand.hpp  UserCommand.hpp
tool-dfxcli/src/: AuthCommands.cpp  ConfigCommand.cpp  DFXAppCommand.cpp  DeviceCommand.cpp  LicenseCommand.cpp  MainCLI.cpp  MeasurementCommand.cpp  OrganizationCommand.cpp  ProfileCommand.cpp  SignalCommand.cpp  StatusCommand.cpp  StudyCommand.cpp  UserCommand.cpp
websocket/: CMakeLists.txt
websocket/include/dfx/websocket/: WebSocket.hpp  WebSocketLibWebSocket.hpp
websocket/src/: WebSocket.cpp  WebSocketLibWebSocket.cpp
(+137 files in other folders)
